--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,6 @@
 title: AHP_Twitch_Bot Homepage
 email: wyatt.strother@gmail.com
-baseurl: "/ahp_twitch_bot" 
+baseurl: "" 
 url: "http://wstrother.github.io" 
 github_username:  wstrother
 font_str: Quicksand:wght@300;400;500;600;700
-
-# Build settings
-sass:
-  sass_dir: _scss
-  style: compressed
