--- a/_config.yml
+++ b/_config.yml
@@ -4,3 +4,6 @@ baseurl: ""
 url: "http://wstrother.github.io" 
 github_username:  wstrother
 font_str: Quicksand:wght@300;400;500;600;700
+
+plugins:
+  - jekyll-toc
